--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-numpy==1.21.4
-opencv-python==4.5.4.60
-pandas==1.3.4
-scikit-learn==1.0.1
-tensorflow==2.7.0
+numpy
+opencv-python
+pandas
+scikit-learn
+tensorflow
